--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
     "vue": "^2.6.11"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "@vue/test-utils": "^1.2.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "jest": "^26.6.3",
+    "vue-jest": "^3.0.7",
     "vue-svg-loader": "^0.16.0",
     "vue-template-compiler": "^2.6.12"
   },
