--- a/.github/workflows/run-jest.yml
+++ b/.github/workflows/run-jest.yml
@@ -11,4 +11,4 @@ jobs:
         with:
           node-version: 14.16.0
       - run: npm ci
-      - run: ./node_modules/.bin/jest src/**/*.test.js
+      - run: npm run test
